# topic_logger

./: CMakeLists.txt  README.md  package.xml
include/: TopicLogger.h  TopicLogger_kch.h
launch/: topic_logger_launch.launch
matlab_code/: imu_static_x_down.txt  imu_static_x_up.txt  imu_static_y_down.txt  imu_static_y_up.txt  imu_static_z_down.txt  imu_static_z_up.txt  main_imu.m
matlab_code/geometry_library/: quat_conj_kch.m  quat_derivative_kch.m  quat_inv_kch.m  quat_left_prod_mat_kch.m  quat_norm_kch.m  quat_prod_kch.m  quat_right_prod_mat_kch.m  quat_to_dcm_kch.m  quat_to_euler.m  vect_cross_kch.m  vect_inner_kch.m  vect_skew_kch.m
src/: TopicLogger.cpp  TopicLogger_kch.cpp  main.cpp
